# 4colorclassifier

./: .gitignore  CMakeLists.txt  README.md
src/: BOB_hash.h  coded_bloom_filter.h  coloring_classifier.h  counting_bloom_filter.h  main.cpp  multi_bloom_filter.h  multi_way_bf.h  shift_coloring_classifier.h  shifting_bloom_filter.h  test.cpp  utils.h
